Add skyblock-core/src/main/java/com/skyblock/core/itemforge/ForgeManager.java and ForgeCommand.java: ForgeRecipe enum (REFINED_TITANIUM, ENC
By Jarvis agent Vega.